# oasis-poker

./: .gitignore  Cargo.toml  README.md  foundry.toml  hardhat.config.ts  package.json
artifacts/Base.sol/: CommonBase.json  ScriptBase.json  TestBase.json
artifacts/Cards.sol/: CardUtils.json
artifacts/Cards.t.sol/: CardsTest.json
artifacts/Constants.sol/: Constants.json
artifacts/Deck.sol/: DeckUtils.json
artifacts/Deck.t.sol/: Deck.t.json
artifacts/IERC165.sol/: IERC165.json
artifacts/IERC20.sol/: IERC20.json
artifacts/IERC721.sol/: IERC721.json  IERC721Enumerable.json  IERC721Metadata.json  IERC721TokenReceiver.json
artifacts/IMulticall3.sol/: IMulticall3.json
artifacts/MockERC20.sol/: MockERC20.json
artifacts/MockERC721.sol/: IERC721TokenReceiver.json  MockERC721.json
artifacts/StdAssertions.sol/: StdAssertions.json
artifacts/StdChains.sol/: StdChains.json
artifacts/StdCheats.sol/: StdCheats.json  StdCheatsSafe.json
artifacts/StdError.sol/: stdError.json
artifacts/StdInvariant.sol/: StdInvariant.json
artifacts/StdJson.sol/: stdJson.json
artifacts/StdMath.sol/: stdMath.json
artifacts/StdStorage.sol/: stdStorage.json  stdStorageSafe.json
artifacts/StdStyle.sol/: StdStyle.json
artifacts/StdToml.sol/: stdToml.json
artifacts/Test.sol/: Test.json
cache/: solidity-files-cache.json
contracts/: Cards.sol  Constants.sol  Deck.sol  Game.sol  GameSecretive.sol  Poker.sol
scripts/: run-game.ts
src/: lib.rs
test/: Cards.t.sol  Deck.t.sol  Game.t.sol  shuffle.spec.ts
typechain-types/: Game.ts  Poker.ts  hardhat.d.ts  index.ts
(+25 files in other folders)
